--- a/Users/templates/Users/sideBar.html
+++ b/Users/templates/Users/sideBar.html
@@ -76,7 +76,7 @@
         <ul>
             <li class="sidebar__item">
                 <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link">
-                    <img src="../../../media/{{user.profile.image}}" alt="profile-img">
+                    <img src="../../../media/{{profile.image}}" alt="profile-img">
                     <span id="username" class="profile-option">{{user.username}}</span>
                 </a>
             </li>
