--- a/Users/templates/Users/sideBar.html
+++ b/Users/templates/Users/sideBar.html
@@ -75,10 +75,13 @@
     <div class="sidebar__profile">
         <ul>
             <li class="sidebar__item">
-                <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link">
+                {% if type == 'profile' %}
+                <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link"></a>
+                {% else %}	
+                <a href="{% url 'subprofile' user.username %}" class="item--profile sidebar__item-link"></a>
+                {% endif %}
                     <img src="../../../media/{{profile.image}}" alt="profile-img">
                     <span id="username" class="profile-option">{{user.username}}</span>
-                </a>
             </li>
             <li class="sidebar__item">
                 <a href="{% url 'logout' %}" class="sidebar__item-link">
