--- a/Users/templates/Users/subprofile.html
+++ b/Users/templates/Users/subprofile.html
@@ -1,15 +1,91 @@
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{subuser.user.username}}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
+    <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
+    <title>Perfil</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Configuración usuario Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <form method="POST">
-        {% csrf_token %}
-        {{form}}
-        <input type="submit" value="Guardar">
-    </form>
+    {% include 'Users/sideBar.html' with path='profile' profile=profile type=type %}
+    <main>
+        <div class="filter-bar"> 
+            <div class="filter-bar__filter-container">
+                <div class="name">{{subprofile.user.username}}</div>
+                <div class="filter-bar__logo-container">
+                    <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
+                </div>
+            </div>
+        </div>
+        <div class="profile-container">
+            <div class="profile-img-container">
+                <label for="id_image">
+                    <div class="img-overlay">
+                        <button id = 'id_delete_button'>
+                            <span class="material-symbols-outlined">delete</span>
+                        </button>
+                        <form method="POST">
+                            {% csrf_token %}
+                            <input type="checkbox" name="delete_image" id="id_delete_checkbox" hidden>
+                            <input type="submit" id="delete_image" value="submit" hidden>
+                        </form>
+                    </div>
+                    <img src="../../../media/{{subprofile.image}}" alt="profile-img" class="profile-img">
+                </label>
+                <form method="POST" enctype="multipart/form-data" class="image_form">
+                    {% csrf_token %}
+                    {{image_form}}
+                    <input type="submit" id='id_submit' value="Cambiar imagen">
+                </form>
+            </div>
+            <form method="POST">
+                {% csrf_token %}
+                <div class="message">
+                    <p>
+                        {{message}} 
+                    </p>
+                </div>
+                <div>
+                    <label for="id_username">Nombre de Usuario:</label>
+                    {{form_post.errors.username}}
+                    {{form.username}}
+                </div>
+                <div>
+                    <label for="id_email">Correo Electrónico:</label>
+                    {{form_post.errors.email}}
+                    {{form.email}}
+                </div>
+                <div class="modify-password">
+                    <label for="password_id">Contraseña:</label>
+                    {{form_post.errors.password}}
+                    <div>
+                        <input type='password' name='password_support' id="password_id_support"  placeholder='Password' disabled value='password'>
+                        <a title="Cambiar Contraseña" href="{% url 'change_password' %}"><span class="material-symbols-outlined">edit</span></a>
+                    </div>
+                </div>
+                <input type="checkbox" value="Actualizar">
+                <button id="open-dialog">Cambiar Información</button>
+                <dialog id="modify-confirmation">
+                    <div>
+                        <label for="id_password">Ingresar Contraseña:</label>
+                        {{form.password}}
+                    </div> 
+                    <div>
+                        <input type="submit" value="Actualizar">
+                    </div>
+                    <button class="material-symbols-outlined" id="close-dialog">Close</button>
+                </dialog>
+            </form>
+        </div>
+    </main>
+    <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
+    <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
 </body>
 </html>
