Remove required attribute from group field in EditSubprofileForm and update subprofile template to display group errors

--- a/Users/templates/Users/subprofile.html
+++ b/Users/templates/Users/subprofile.html
@@ -62,6 +62,11 @@
                     {{form_post.errors.email}}
                     {{form.email}}
                 </div>
+                <div>
+                    <label for="id_group">Correo Electrónico:</label>
+                    {{form_post.errors.group}}
+                    {{form.group}}
+                </div>
                 <div class="modify-password">
                     <label for="password_id">Contraseña:</label>
                     {{form_post.errors.password}}
