Refactor CSS styles for authentication and password reset, update subprofile template for improved navigation and metadata

--- a/Users/static/CSS/authenticateStyles.css
+++ b/Users/static/CSS/authenticateStyles.css
@@ -279,12 +279,9 @@ form > h2 {
 }
 
 @media (max-width: 768px) {
-    nav {
-        display: none;
-    }
-
     .container {
         height: 710px;
+        border-radius: 50px;
     }
     .toogle-container {
         display: none;
