--- a/Users/templates/Users/password_reset.html
+++ b/Users/templates/Users/password_reset.html
@@ -13,7 +13,14 @@
     <meta name="author" content="Log Inventory">
     <meta name="robots" content="index, follow">
 </head>
-<body>
+<body> 
+    <nav>
+        <div class="home-link__container"> 
+            <a title="Volver al home" class="home-link" href="{% url 'home' %}">
+                <span class="material-symbols-outlined">arrow_back</span>
+            </a>
+        </div>
+    </nav>
     <main>
         <div class="info">
             <h1>Recuperar contraseña <span class="material-symbols-outlined">Lock_reset</span></h1>
