--- a/Users/static/CSS/profileStyles.css
+++ b/Users/static/CSS/profileStyles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-body, div, ul, li, a, h1, h2, h3, h4, p {
+body, div, ul, li, a, h1, h2, h3, h4, p, select {
     margin: 0;
     padding: 0;
 }
@@ -79,7 +79,7 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     background-size: cover;
     padding-top: calc(2rem + 44.78px);
 }
-
+ 
 .profile-img-container {
     display: flex;
     place-content: center;
@@ -158,7 +158,7 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     font-size: .9rem;
 }
 
-form input {
+form input, form select {
     background-color: #eee;
     border: none;
     margin: 10px 0;
@@ -170,7 +170,11 @@ form input {
     outline: none;
 }
 
-form input:focus {
+form select {
+    cursor: pointer;
+}
+
+form input:focus, form select:focus {
     outline: var(--wood) 1px solid;
 }
 
