--- a/Users/static/CSS/sideBarStyles.css
+++ b/Users/static/CSS/sideBarStyles.css
@@ -10,7 +10,7 @@
     padding: 0px 0px 30px 0px;
 }
 
-.sidebar__nav {
+.sidebar__nav { 
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -23,6 +23,31 @@
     justify-content: space-evenly;
     height: 60dvh;
     width: 100%;
+}
+
+.sidebar__tools {
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-top: 3px solid #fff;
+    border-bottom: 2px solid #fff;
+    border-radius: 10px;
+}
+
+.sidebar__tools > p {
+    position: absolute;
+    padding: 0 5px;
+    top: -20px;
+    left: 40px;
+    font-size: 1rem;
+    color: #fff;
+    background-color: var(--sidebar-color);
+}
+
+.sidebar__tools  span {
+    position: relative;
+    top: 5px;
 }
 
 .sidebar__item-link {
@@ -172,6 +197,10 @@ input[type="checkbox"]:checked ~ label::before, input[type="checkbox"]:checked ~
     width: fit-content;
 }
 
+
+.sidebar:has(input[type="checkbox"]:checked) .sidebar__tools > p {
+    display: none;
+}
 
 .sidebar:has(input[type="checkbox"]:checked) :is(.sidebar__item-link > p, .profile-option) {
     display: none;
