--- a/Users/templates/Users/sideBar.html
+++ b/Users/templates/Users/sideBar.html
@@ -26,16 +26,16 @@
         <li class="sidebar__tools">
             <p>Herramientas<span class="material-symbols-outlined">build</span></p>
             <div class="sidebar__item">
-                <a href="#" class="sidebar__item-link">
+                <label for="create-subuser" class="sidebar__item-link">
                     <span class="material-symbols-outlined">person_add</span>
                     <p>Crear Usuario</p>
-                </a>
+                </label>
             </div> 
             <div class="sidebar__item">
-                <a href="#" class="sidebar__item-link">
+                <label for="create-group" class="sidebar__item-link">
                     <span class="material-symbols-outlined">Group_add</span>
                     <p>Crear Grupo</p>
-                </a>
+                </label>
             </div>
         </li>
         <li class="sidebar__item">
