--- a/Users/templates/Users/subusers.html
+++ b/Users/templates/Users/subusers.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div class="createSubuser-container">
+        <div class="forms-container">
             <input type="checkbox" {{checked}} id="create-subuser">
             <form class="create-subuser" id='form-subuser' method="POST">
                 {% csrf_token %}
@@ -32,8 +32,6 @@
                 <input type="button" value="Crear Usuario" id="open-dialog">
                 <input type="submit" hidden id="submit">
             </form>
-        </div>
-        <div class="createGroup-container">
             <input type="checkbox" {{checked_group}} id="create-group">
             <form class="create-group" method="POST">
                 {% csrf_token %}
