Refactor sidebar labels and improve group/subuser interaction in forms

--- a/Users/templates/Users/sideBar.html
+++ b/Users/templates/Users/sideBar.html
@@ -26,13 +26,13 @@
         <li class="sidebar__tools">
             <p>Herramientas<span class="material-symbols-outlined">build</span></p>
             <div class="sidebar__item">
-                <label for="create-subuser" class="sidebar__item-link">
+                <label for="create-subuser" class="sidebar__item-link" id="create-subuser-label">
                     <span class="material-symbols-outlined">person_add</span>
                     <p>Crear Usuario</p>
                 </label>
             </div> 
             <div class="sidebar__item">
-                <label for="create-group" class="sidebar__item-link">
+                <label for="create-group" class="sidebar__item-link" id="create-group-label">
                     <span class="material-symbols-outlined">Group_add</span>
                     <p>Crear Grupo</p>
                 </label>
