--- a/Users/templates/Users/subprofile.html
+++ b/Users/templates/Users/subprofile.html
@@ -63,7 +63,7 @@
                     {{form.email}}
                 </div>
                 <div>
-                    <label for="id_group">Correo Electrónico:</label>
+                    <label for="id_group">Grupo:</label>
                     {{form_post.errors.group}}
                     {{form.group}}
                 </div>
