--- a/Users/static/CSS/subusersStyles.css
+++ b/Users/static/CSS/subusersStyles.css
@@ -23,8 +23,10 @@ main {
     background-color: var(--bg-color);
     position: fixed;
     right: 0;
+    background-image: url(../IMAGES/Escritorio.webp);
+    background-size: cover;
 }
-
+ 
 aside:has(input[type="checkbox"]:checked) ~ main {
     width: calc(100dvw - 62px);
 }
@@ -85,10 +87,13 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 }
 
 .subusers-table__container {
-    height: 100%;
-    width: 100%;
-    height: calc(100% - calc(2rem + 44.78px) - 4.2rem);
+    width: 96%;
+    height: auto;
+    max-height: calc(100% - calc(2rem + 44.78px) - 4.2rem);
     overflow-y: auto;
+    padding: 2px;
+    margin: 1.8% 2%;
+    background-color: var(--fb-color);
 }
 
 .subusers-table {
@@ -100,8 +105,12 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     padding: 8px;
 }
 
+.subusers-table tr {
+    background-color: #fff;
+}
+
 .subusers-table tr:hover {
-    background-color: #f2f2f2;
+    filter: brightness(1);
     cursor: pointer;
 }
 
