update sidebar includes to pass permissions

--- a/Users/templates/Users/error_403.html
+++ b/Users/templates/Users/error_403.html
@@ -17,7 +17,7 @@
             Error 403
         </h1>
         <div class="typewritter">
-            <p>Error al intentar acceder al área de trabajo, asegúrese de haber iniciado sesión.</p>
+            <p>Error al intentar visualizar la página, asegúrese de que tiene permiso para verla con su administrador.</p>
         </div>
     </div>
     <div class="image__container">
