--- a/Users/templates/Users/subprofile.html
+++ b/Users/templates/Users/subprofile.html
@@ -14,7 +14,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='profile' profile=profile type=type permissions=permisisons %}
+    {% include 'Users/sideBar.html' with path='profile' profile=profile type=type permissions=permissions profile_admin=profile_admin %}
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
