--- a/Users/static/CSS/subusersStyles.css
+++ b/Users/static/CSS/subusersStyles.css
@@ -65,29 +65,113 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     align-items: center;
 }
 
-.create-subuser, .create-group{
-    display: none;
-    position: relative;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-}
-
-#create-subuser:checked ~ .create-subuser, #create-group:checked ~ .create-group {
-    display: block;
-    position: absolute;
-    z-index: 1;
-}
-
-.forms-container:has(input[type="checkbox"]:checked) ∼ .subusers-table__container {
-    display: none;
-}
-
 .logo {
     height: clamp(15px, calc(10dvh - 5px), 75px);
     width: clamp(42px, calc(28dvh - 5px), 210px);
     margin: 2.5px 0px;
 }
+
+.create-subuser, .create-group{
+    display: none;
+}
+
+#create-subuser:checked ~ .create-subuser, #create-group:checked ~ .create-group {
+    display: flex;
+}
+
+.subusers-link__container{
+    position: absolute;
+}
+
+.forms-container form {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 50dvh;
+    width: 50%;
+    padding: 0 40px;
+    border-radius: 20px;
+    margin: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 50dvh) / 2) 25%;
+    background-color: var(--sidebar-color);
+}
+
+.forms-container form.create-subuser {
+    height: 82.5dvh;
+    margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 82.5dvh) / 2);
+}
+
+.forms-container input[type="submit"], .forms-container input[type="button"] {
+    background-color: var(--fb-color);
+    color: #fff;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-family: inherit;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: box-shadow .3s;
+    outline: none;
+}
+
+.forms-container input[type="submit"]:hover, .forms-container input[type="button"]:hover {
+    box-shadow: 7px 7px 0px rgb(100, 166, 231),
+                -7px -7px 0px #335a94;
+}
+
+.forms-container form input, form select {
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    font-family: inherit;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+}
+
+form select {
+    cursor: pointer;
+}
+
+.forms-container form input:focus {
+    outline: var(--wood) 1px solid;
+}
+
+.forms-container form a {
+    color: #333;
+    text-decoration: none;
+    margin-top: 45px;
+    font-size: .9rem;
+}
+
+.forms-container form a:hover {
+    text-decoration: underline;
+}
+
+.forms-container form > div, .forms-container form > button {
+    width: 100%;
+}
+
+.errorlist {
+    list-style: none;
+}
+
+.errorlist li {
+    color: #e24;
+    font-size: .9rem;
+}
+
+dialog {
+    border: none;
+    border-radius: 20px;
+    padding: 20px 40px;
+
+}
+
+
 
 .subusers-table__container {
     width: 96%;
@@ -110,10 +194,11 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 
 .subusers-table tr {
     background-color: #fff;
+    transition: background-color 0.1s;
 }
 
 .subusers-table tr:hover {
-    background-color: #ccc;
+    background-color: #888;
     cursor: pointer;
 }
 
@@ -122,21 +207,8 @@ aside:has(input[type="checkbox"]:checked) ~ main {
     cursor: default;
 }
 
-.subusers-tools {
-    display: flex;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 4.2rem;
-    background-color: #335a94;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.subusers-tools label {
-    color: #fff;
-    font-size: 1.8rem;
-    cursor: pointer;
+.hidden {
+    display: none;
 }
 
 @media (max-width: 768px) {
