--- a/Users/templates/Users/subprofiles_group.html
+++ b/Users/templates/Users/subprofiles_group.html
@@ -15,14 +15,25 @@
         {%csrf_token%}
         <input type="number" value="{{form.instance.id}}" hidden name="id">
         <div>
+            {%if form.instance.pk == group.pk %}
+            <ul class="errorlist">
+                <li>{{message}}</li>
+            </ul>
+            {%endif%}
+        </div>
+        <div>
             {{form.name.label}}
             {{form.name}}
-            {{form.errors.name}}
+            {%if form.instance.pk == group.pk %}
+            {{form_post.errors.name}}
+            {%endif%}
         </div>
         <div>
             {{form.permissions.label}}
             {{form.permissions}}
-            {{form.errors.permissions}}
+            {%if form.instance.pk == group.pk %}
+            {{form_post.errors.permissions}}
+            {%endif%}
         </div>
         <input type="submit" value="Guardar">
     </form>
@@ -30,6 +41,7 @@
         {%csrf_token%}
         {{image_form}}
     </form>
+    
     {% endfor %}
 </body>
 </html>
