--- a/Users/templates/Users/subprofiles_group.html
+++ b/Users/templates/Users/subprofiles_group.html
@@ -39,9 +39,15 @@
     </form>
     <form method="POST">
         {%csrf_token%}
+        <input type="number" value="{{form.instance.id}}" hidden name="id">
         {{image_form}}
     </form>
-    
+    <form method="POST">
+        {% csrf_token %}
+        <input type="number" value="{{form.instance.id}}" hidden name="id">
+        <input type="checkbox" name="delete_image" id="id_delete_checkbox" hidden>
+        <input type="submit" id="delete_image" value="submit" hidden>
+    </form>
     {% endfor %}
 </body>
 </html>
