--- a/Users/templates/Users/subprofiles_group.html
+++ b/Users/templates/Users/subprofiles_group.html
@@ -1,53 +1,68 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static '/CSS/subUsersStyles.css' %}">
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
-    <title>Grupos</title>
+    <link rel="stylesheet" href="{%static '/CSS/subprofilesGroupStyles.css'%}">
+    <title>Manejo de Grupos</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Subusers Groups Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% for form in forms %}
-    <form method="POST">
-        {%csrf_token%}
-        <input type="number" value="{{form.instance.id}}" hidden name="id">
-        <div>
-            {%if form.instance.pk == group.pk %}
-            <ul class="errorlist">
-                <li>{{message}}</li>
-            </ul>
-            {%endif%}
+    {% include 'Users/sideBar.html' with path='manage_subusers' profile=profile type=type permissions=permissions%}
+    <main>
+        <div class="filter-bar"> 
+            <div class="filter-bar__filter-container">
+                <p>Grupos</p>
+                <div class="filter-bar__logo-container">
+                    <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
+                </div>
+            </div>
         </div>
-        <div>
-            {{form.name.label}}
-            {{form.name}}
-            {%if form.instance.pk == group.pk %}
-            {{form_post.errors.name}}
-            {%endif%}
-        </div>
-        <div>
-            {{form.permissions.label}}
-            {{form.permissions}}
-            {%if form.instance.pk == group.pk %}
-            {{form_post.errors.permissions}}
-            {%endif%}
-        </div>
-        <input type="submit" value="Guardar">
-    </form>
-    <form method="POST">
-        {%csrf_token%}
-        <input type="number" value="{{form.instance.id}}" hidden name="id">
-        {{image_form}}
-    </form>
-    <form method="POST">
-        {% csrf_token %}
-        <input type="number" value="{{form.instance.id}}" hidden name="id">
-        <input type="checkbox" name="delete_image" id="id_delete_checkbox" hidden>
-        <input type="submit" id="delete_image" value="submit" hidden>
-    </form>
-    {% endfor %}
+        {% for form in forms %}
+        <form method="POST"> 
+            {%csrf_token%}
+            <input type="number" value="{{form.instance.id}}" hidden name="id">
+            <div>
+                {%if form.instance.pk == group.pk %}
+                <ul class="errorlist">
+                    <li>{{message}}</li>
+                </ul>
+                {%endif%}
+            </div>
+            <div>
+                {{form.name.label}}
+                {{form.name}}
+                {%if form.instance.pk == group.pk %}
+                {{form_post.errors.name}}
+                {%endif%}
+            </div>
+            <div>
+                {{form.permissions.label}}
+                {{form.permissions}}
+                {%if form.instance.pk == group.pk %}
+                {{form_post.errors.permissions}}
+                {%endif%}
+            </div>
+            <input type="submit" value="Guardar">
+        </form>
+        <form method="POST">
+            {%csrf_token%}
+            <input type="number" value="{{form.instance.id}}" hidden name="id">
+            {{image_form}}
+        </form>
+        <form method="POST">
+            {% csrf_token %}
+            <input type="number" value="{{form.instance.id}}" hidden name="id">
+            <input type="checkbox" name="delete_image" id="id_delete_checkbox" hidden>
+            <input type="submit" id="delete_image" value="submit" hidden>
+        </form>
+        {% endfor %}
+    </main>
 </body>
 </html>
